<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:contentInsetLeft="0dp"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/newTask_back"
                android:layout_width="wrap_content"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:paddingRight="16dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_task_activity_title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"/>

            <ImageView
                android:id="@+id/newTask_done"
                android:layout_width="wrap_content"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_weight="0"
                android:paddingLeft="16dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_done_white_36px"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="16dp"
                  android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/new_task_contacts"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newTask_selected_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:textSize="14sp"
                android:hint="@string/new_task_contacts_number"/>

            <ImageView
                android:id="@+id/newTask_clear_group"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_weight="0"
                android:paddingLeft="16dp"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_notification_clear_all"/>

            <ImageView
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_weight="0"
                android:paddingLeft="16dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_contact_mail_black_36px"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/new_task_subject_title"/>

        <EditText
            android:id="@+id/newTask_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/new_task_subject"
            android:hint="@string/new_task_subject_hint"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/new_task_summary_title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bold"
                android:text="N"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

            <Button
                android:id="@+id/italic"
                android:text="I"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

            <Button
                android:id="@+id/link"
                android:text="link"
                android:layout_width="wrap_content"
                android:layout_height="48dp"/>

            <Button
                android:id="@+id/newTask_clear"
                android:text="@string/new_task_clear"
                android:layout_width="wrap_content"
                android:layout_height="48dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/newTask_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:textSize="14sp"
            android:text="@string/new_task_body"
            android:hint="@string/new_task_summary_hint"/>

        <Button
            android:id="@+id/newTask_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_task_send"/>

    </LinearLayout>

</LinearLayout>

